# advent-of-code

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
cmake/: GenerateExercise.cmake  GenerateResource.cmake
devel/: CMakeLists.txt
devel/include/: Config.h.in
devel/src/: main.cpp
include/: day01.h  day02.h  day03.h
src/: CMakeLists.txt  day01.h  day03.h  main.cpp
src/app/: CMakeLists.txt  main.cpp
src/include/aoc/: AllExercises.h.in  Exercise.h  Result.h  exercises.h
src/include/aoc/2019/: IntCodeProgram.h
src/include/aoc/res/: Resource.h.in
src/include/aoc/utils/: CartesianProduct.h  Position.h  ToInts.h
src/lib/: CMakeLists.txt
src/lib/include/aoc/: day01.h  day04.h  exercise01.h  exercise02.h  exercise03.h  exercise04.h  exercise05.h  exercises.h
src/lib/include/aoc/2019/: IntCodeProgram.h
src/lib/include/aoc/2020/: exercise01.h  exercise02.h  exercise03.h  exercise04.h  exercise05.h  exercise06.h  exercise07.h
src/lib/include/aoc/res/: Resource.h.in
src/lib/include/aoc/utils/: Overloaded.h  Position.h
src/lib/src/2019/: exercise01.cpp  exercise02.cpp  exercise03.cpp  exercise04.cpp  exercise05.cpp  exercise06.cpp  exercise07.cpp
src/lib/src/2020/: exercise01.cpp  exercise03.cpp  exercise04.cpp  exercise06.cpp  exercise07.cpp  exercise08.cpp  exercise10.cpp  exercise11.cpp  exercise12.cpp  exercise13.cpp  exercise14.cpp  exercise15.cpp  exercise16.cpp  exercise17.cpp  exercise18.cpp  exercise19.cpp  exercise20.cpp  exercise21.cpp  exercise22.cpp  exercise23.cpp  exercise24.cpp  exercise25.cpp
src/src/: Exercise.cpp.in  exercise-main.cpp.in  exercise.cpp.in  main.cpp
src/src/2019/: Exercise01.cpp  Exercise02.cpp  Exercise03.cpp  Exercise04.cpp  Exercise05.cpp  Exercise06.cpp  Exercise07.cpp  Exercise08.cpp  Exercise09.cpp  Exercise10.cpp
src/src/2020/: Exercise01.cpp  Exercise02.cpp  Exercise03.cpp  Exercise04.cpp  Exercise05.cpp  Exercise06.cpp  Exercise07.cpp  Exercise08.cpp  Exercise09.cpp  Exercise10.cpp  Exercise11.cpp  Exercise12.cpp  Exercise13.cpp  Exercise14.cpp  Exercise15.cpp  Exercise16.cpp  Exercise17.cpp  Exercise18.cpp  Exercise19.cpp  Exercise20.cpp  Exercise21.cpp  Exercise22.cpp  Exercise23.cpp  Exercise24.cpp  Exercise25.cpp  exercise01.cpp  exercise02.cpp  exercise03.cpp  exercise04.cpp  exercise05.cpp  exercise06.cpp  exercise07.cpp  exercise08.cpp  exercise09.cpp  exercise10.cpp  exercise11.cpp  exercise12.cpp  exercise13.cpp  exercise14.cpp  exercise15.cpp  (+10 more)
src/src/2021/: Exercise01.cpp  Exercise02.cpp  Exercise03.cpp  Exercise04.cpp  Exercise05.cpp  Exercise06.cpp  Exercise07.cpp  Exercise08.cpp  Exercise09.cpp  Exercise10.cpp  Exercise11.cpp  Exercise12.cpp  Exercise13.cpp  Exercise14.cpp  Exercise15.cpp  Exercise16.cpp  Exercise17.cpp  Exercise18.cpp  Exercise19.cpp  Exercise20.cpp  Exercise21.cpp  Exercise22.cpp  Exercise23.cpp  Exercise24.cpp  Exercise25.cpp
src/src/2022/: Exercise01.cpp  Exercise02.cpp  Exercise03.cpp  Exercise04.cpp  Exercise05.cpp  Exercise06.cpp  Exercise07.cpp  Exercise08.cpp  Exercise09.cpp  Exercise10.cpp  Exercise11.cpp  Exercise12.cpp
test/: CMakeLists.txt  test.cpp
test/include/test/: util.h
test/src/: Exercise.cpp.in  exercise.cpp.in  exercise01.cpp  exercise02.cpp  exercise03.cpp  exercise04.cpp  exercise05.cpp
test/src/2019/: CMakeLists.txt  Exercise01.cpp  Exercise02.cpp  Exercise03.cpp  Exercise04.cpp  Exercise05.cpp  Exercise06.cpp  Exercise07.cpp  Exercise08.cpp  Exercise09.cpp  Exercise10.cpp  exercise01.cpp  exercise02.cpp  exercise03.cpp  exercise04.cpp  exercise05.cpp  exercise06.cpp  exercise07.cpp
test/src/2020/: CMakeLists.txt  Exercise01.cpp  Exercise02.cpp  Exercise03.cpp  Exercise04.cpp  Exercise05.cpp  Exercise06.cpp  Exercise07.cpp  Exercise08.cpp  Exercise09.cpp  Exercise10.cpp  Exercise11.cpp  Exercise12.cpp  Exercise13.cpp  Exercise14.cpp  Exercise15.cpp  Exercise16.cpp  Exercise17.cpp  Exercise18.cpp  Exercise19.cpp  Exercise20.cpp  Exercise21.cpp  Exercise22.cpp  Exercise23.cpp  Exercise24.cpp  Exercise25.cpp  exercise01.cpp  exercise02.cpp  exercise03.cpp  exercise04.cpp  exercise05.cpp  exercise06.cpp  exercise07.cpp  exercise08.cpp  exercise09.cpp  exercise10.cpp  exercise11.cpp  exercise12.cpp  exercise13.cpp  exercise14.cpp  (+11 more)
test/src/2021/: Exercise01.cpp  Exercise02.cpp  Exercise03.cpp  Exercise04.cpp  Exercise05.cpp  Exercise06.cpp  Exercise07.cpp  Exercise08.cpp  Exercise09.cpp  Exercise10.cpp  Exercise11.cpp  Exercise12.cpp  Exercise13.cpp  Exercise14.cpp  Exercise15.cpp  Exercise16.cpp  Exercise17.cpp  Exercise18.cpp  Exercise19.cpp  Exercise20.cpp  Exercise21.cpp  Exercise22.cpp  Exercise23.cpp  Exercise24.cpp  Exercise25.cpp
test/src/2022/: Exercise01.cpp  Exercise02.cpp  Exercise03.cpp  Exercise04.cpp  Exercise05.cpp  Exercise06.cpp  Exercise07.cpp  Exercise08.cpp  Exercise09.cpp  Exercise10.cpp  Exercise11.cpp  Exercise12.cpp
